--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,10 @@ dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
     // https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
     implementation group: 'org.mockito', name: 'mockito-core', version: '5.12.0'
-    testImplementation group: 'org.junit', name: 'junit5-engine', version: '5.0.0-ALPHA'
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.11.0-M2'
+    // https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.11.0-M2'
+    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.26.3'
 
     // https://mvnrepository.com/artifact/net.bytebuddy/byte-buddy-gradle-plugin
     runtimeOnly group: 'net.bytebuddy', name: 'byte-buddy-gradle-plugin', version: '1.14.17'
