Enable Exceptions, remove maps
TODO: throwable

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,15 @@
 plugins {
     id 'java'
+    id 'jacoco'
+}
+
+jacocoTestReport {
+    dependsOn test // tests are required to run before generating the report
+    reports {
+        xml.required = false
+        csv.required = false
+        html.outputLocation = layout.buildDirectory.dir('reports/jacoco')
+    }
 }
 
 group = 'org.katie.orange'
@@ -27,4 +37,5 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    finalizedBy jacocoTestReport
 }
