--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,11 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+### TeXStudio ###
+docs/*
+#!docs/*.tex
+#!docs/*.uml
+
 ### IntelliJ IDEA ###
 .idea/modules.xml
 .idea/jarRepositories.xml
