--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ repositories {
 }
 
 dependencies {
+
     testImplementation platform('org.junit:junit-bom:5.9.1')
     // https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
     implementation group: 'org.mockito', name: 'mockito-core', version: '5.12.0'
@@ -37,5 +38,6 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    exclude('**/**IntegrationTests.java')
     finalizedBy jacocoTestReport
 }
