--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,3 +1,8 @@
+#
+# Copyright (c) 2025 <project contributors>
+# This program is made available under the terms of the MIT License.
+#
+
 #Thu Dec 21 03:50:04 PST 2023
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
