--- a/build.gradle
+++ b/build.gradle
@@ -39,14 +39,14 @@ dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
     // https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
     implementation group: 'org.mockito', name: 'mockito-core', version: '5.12.0'
-    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.11.0-M2'
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.11.4'
     // https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine
-    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.11.0-M2'
-    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.26.3'
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.11.4'
+    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.27.3'
 
     // https://mvnrepository.com/artifact/net.bytebuddy/byte-buddy-gradle-plugin
-    runtimeOnly group: 'net.bytebuddy', name: 'byte-buddy-gradle-plugin', version: '1.14.17'
-    implementation 'net.bytebuddy:byte-buddy:1.14.17'
+    runtimeOnly group: 'net.bytebuddy', name: 'byte-buddy-gradle-plugin', version: '1.17.0'
+    implementation 'net.bytebuddy:byte-buddy:1.17.0'
     // https://mvnrepository.com/artifact/com.squareup/javapoet
     implementation group: 'com.palantir.javapoet', name: 'javapoet', version: '0.5.0'
 }
